# desktop-cache

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  SUNWdesktop-cache.copyright  SUNWdesktop-cache.spec  autogen.sh  configure.in  find_newer  restart_fmri
desktop-mime-cache/: Makefile.am  desktop-mime-cache  desktop-mime-cache.xml
gconf-cache/: Makefile.am  TODO  gconf-cache  gconf-cache.xml
icon-cache/: Makefile.am  TODO  icon-cache  icon-cache.xml
input-method/: Makefile.am  input-method-cache  input-method-cache.xml
mime-types-cache/: Makefile.am  mime-types-cache  mime-types-cache.xml
pixbuf-loaders/: Makefile.am  TODO  pixbuf-loaders-installer  pixbuf-loaders-installer.xml
