manifestdir = $(sysconfdir)/svc/manifest/application/desktop-cache/
methoddir = $(libdir)/svc/method/

manifest_DATA = pixbuf-loaders-installer.xml
method_SCRIPTS = pixbuf-loaders-installer

EXTRA_DIST = \
	pixbuf-loaders-installer \
	pixbuf-loaders-installer.xml 

MAINTAINERCLEANFILES = \
	Makefile.in
